--- a/templates/collector-deployment.yaml
+++ b/templates/collector-deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
@@ -10,6 +10,9 @@ metadata:
   name: collector
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+        io.kompose.service: collector
   strategy: {}
   template:
     metadata:
@@ -20,9 +23,13 @@ spec:
       imagePullSecrets:
       - name: regcred
       containers:
-      - env:
+      - args:
+        - bash
+        - -c
+        - while ! </dev/tcp/{{ .Values.postgres.host }}/5432; do sleep 1; done; flask db upgrade && /collector/run-collector.sh
+        env:
         - name: CELERY_BROKER_URL
-          value: redis://redis:6379/0
+          value: {{ .Values.redis.uri }}
         - name: COLLECTOR_DISCARD
           value: "True"
         - name: FLASK_APP
@@ -34,8 +41,8 @@ spec:
         - name: PYTHONPATH
           value: /collector
         - name: SQLALCHEMY_DATABASE_URI
-          value: postgresql://collector:collector@collector-database:5432/collector
-        image: kong-docker-kong-brain-internal-builds.bintray.io/kong-brain:master
+          value: "postgres://collector:collector@{{ .Values.postgres.host }}:5432/collector"
+        image: {{ .Values.image }}
         name: collector
         ports:
         - containerPort: 5000
