--- a/templates/testendpoints-deployment.yaml
+++ b/templates/testendpoints-deployment.yaml
@@ -23,7 +23,7 @@ spec:
       imagePullSecrets:
       - name: regcred
       containers:
-      - image: {{ .Values.image }}
+      - image: kong-docker-kong-brain-internal-builds.bintray.io/kong-brain-test-endpoints:latest
         name: testendpoints
         ports:
         - containerPort: 6000
