--- a/values.yaml
+++ b/values.yaml
@@ -1,7 +1,8 @@
 image: kong-docker-kong-brain-internal-builds.bintray.io/kong-brain:master
 
-# todo connect to kong
-
+kong:
+  host: my-kong-kong-proxy
+  port: "8001"
 
 postgres:
   host: my-psql-postgresql
