--- a/templates/celery-worker-deployment.yaml
+++ b/templates/celery-worker-deployment.yaml
@@ -42,7 +42,7 @@ spec:
           value: /collector
         - name: SQLALCHEMY_DATABASE_URI
           value: postgres://collector:collector@{{ .Values.postgres.host }}:5432/collector
-        image: {{ .Values.image }}
+        image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         name: celery-worker
         resources: {}
       restartPolicy: Always
