--- a/templates/collector-deployment.yaml
+++ b/templates/collector-deployment.yaml
@@ -2,9 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "kong-collectorapi.fullname" . }}
-  annotations:
-    kompose.cmd: kompose convert -c
-    kompose.version: 1.18.0 (06a2e56)
+  annotations: {}
   creationTimestamp: null
   labels:
     io.kompose.service: collector
