--- a/values.yaml
+++ b/values.yaml
@@ -1,6 +1,8 @@
 image:
   repository: kong-docker-kong-brain-internal-builds.bintray.io/kong-brain
-  tag: master
+  tag: latest
+# repository: kong-docker-kong-brain-immunity-base.bintray.io/kong-brain-immunity
+  tag: 1.0.0
 
 imagePullSecrets:
   - name: regcred
