--- a/templates/collector-service.yaml
+++ b/templates/collector-service.yaml
@@ -5,12 +5,12 @@ metadata:
   annotations: {}
   creationTimestamp: null
   labels:
-    io.kompose.service: collector
+    app: collector
 spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
   selector:
-    io.kompose.service: collector
+    app: collector
 status:
   loadBalancer: {}
