--- a/templates/collector-deployment.yaml
+++ b/templates/collector-deployment.yaml
@@ -6,11 +6,15 @@ metadata:
   creationTimestamp: null
   labels:
     app: collector
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    release: "{{ .Release.Name }}"
+    heritage: "{{ .Release.Service }}"
 spec:
   replicas: 1
   selector:
     matchLabels:
         app: collector
+        release: "{{ .Release.Name }}"
   strategy: {}
   template:
     metadata:
