--- a/templates/celery-worker-deployment.yaml
+++ b/templates/celery-worker-deployment.yaml
@@ -5,6 +5,9 @@ metadata:
   creationTimestamp: null
   labels:
     app: celery-worker
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    release: "{{ .Release.Name }}"
+    heritage: "{{ .Release.Service }}"
   name: celery-worker
 spec:
   replicas: 1
@@ -12,11 +15,13 @@ spec:
   selector:
     matchLabels:
         app: celery-worker
+        release: "{{ .Release.Name }}"
   template:
     metadata:
       creationTimestamp: null
       labels:
         app: celery-worker
+        release: "{{ .Release.Name }}"
     spec:
     {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
