--- a/templates/celery-worker-deployment.yaml
+++ b/templates/celery-worker-deployment.yaml
@@ -28,15 +28,7 @@ spec:
         {{- toYaml . | nindent 8 }}
     {{- end }}
       initContainers:
-      - name: wait-for-postgres
-        image: "{{ .Values.waitImage.repository }}:{{ .Values.waitImage.tag }}"
-        imagePullPolicy: {{ .Values.waitImage.pullPolicy }}
-        env:
-        - name: COLLECTOR_PG_HOST
-          value: "{{ .Values.postgres.host }}"
-        - name: COLLECTOR_PG_PORT
-          value: "{{ .Values.postgres.port }}"
-        command: [ "/bin/sh", "-c", "until nc -zv $COLLECTOR_PG_HOST $COLLECTOR_PG_PORT -w1; do echo 'waiting for db'; sleep 1; done" ]
+      {{- include "kong-collectorapi.wait-for-db" . | nindent 6 }}
       containers:
       - args:
         - bash
@@ -54,7 +46,7 @@ spec:
         - name: KONG_PORT
           value: "{{ .Values.kong.port }}"
         - name: SQLALCHEMY_DATABASE_URI
-          value: "postgres://{{ .Values.postgres.username }}:{{ .Values.postgres.password }}@{{ .Values.postgres.host }}:{{ .Values.postgres.port }}/collector"
+          value: "postgres://{{ .Values.postgresql.postgresqlUsername }}:{{ .Values.postgresql.postgresqlPassword }}@{{ template "kong-collectorapi.postgresql.fullname" . }}:{{ .Values.postgresql.service.port }}/{{ .Values.postgresql.postgresqlDatabase }}"
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         name: celery-worker
         resources: {}
