--- a/templates/collector-deployment.yaml
+++ b/templates/collector-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations: {}
   creationTimestamp: null
   labels:
-    app: collector
+    app: "{{ template "kong-collectorapi.name" . }}"
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
@@ -13,29 +13,22 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-        app: collector
+        app: "{{ template "kong-collectorapi.name" . }}"
         release: "{{ .Release.Name }}"
   strategy: {}
   template:
     metadata:
       creationTimestamp: null
       labels:
-        app: collector
+        app: "{{ template "kong-collectorapi.name" . }}"
+        release: "{{ .Release.Name }}"
     spec:
     {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
     {{- end }}
       initContainers:
-      - name: wait-for-postgres
-        image: "{{ .Values.waitImage.repository }}:{{ .Values.waitImage.tag }}"
-        imagePullPolicy: {{ .Values.waitImage.pullPolicy }}
-        env:
-        - name: COLLECTOR_PG_HOST
-          value: "{{ .Values.postgres.host }}"
-        - name: COLLECTOR_PG_PORT
-          value: "{{ .Values.postgres.port }}"
-        command: [ "/bin/sh", "-c", "until nc -zv $COLLECTOR_PG_HOST $COLLECTOR_PG_PORT -w1; do echo 'waiting for db'; sleep 1; done" ]
+      {{- include "kong-collectorapi.wait-for-db" . | nindent 6 }}
       containers:
       - args:
         - bash
@@ -53,7 +46,7 @@ spec:
         - name: KONG_PORT
           value: "{{ .Values.kong.port }}"
         - name: SQLALCHEMY_DATABASE_URI
-          value: "postgres://{{ .Values.postgres.username }}:{{ .Values.postgres.password }}@{{ .Values.postgres.host }}:{{ .Values.postgres.port }}/collector"
+          value: "postgres://{{ .Values.postgresql.postgresqlUsername }}:{{ .Values.postgresql.postgresqlPassword }}@{{ template "kong-collectorapi.postgresql.fullname" . }}:{{ .Values.postgresql.service.port }}/{{ .Values.postgresql.postgresqlDatabase }}"
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         name: collector
         ports:
