--- a/templates/collector-service.yaml
+++ b/templates/collector-service.yaml
@@ -5,16 +5,12 @@ metadata:
   annotations: {}
   creationTimestamp: null
   labels:
-    app: collector
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
-    release: "{{ .Release.Name }}"
-    heritage: "{{ .Release.Service }}"
+    {{- include "kong-collectorapi.metaLabels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
   selector:
-    app: collector
-    release: "{{ .Release.Name }}"
+    {{- include "kong-collectorapi.metaLabels" . | nindent 4 }}
 status:
   loadBalancer: {}
