--- a/templates/collector-deployment.yaml
+++ b/templates/collector-deployment.yaml
@@ -6,17 +6,20 @@ metadata:
   creationTimestamp: null
   labels:
     {{- include "kong-collectorapi.metaLabels" . | nindent 4 }}
+    app.kubernetes.io/component: app
 spec:
   replicas: 1
   selector:
     matchLabels:
-        {{- include "kong-collectorapi.metaLabels" . | nindent 6 }}
+      {{- include "kong-collectorapi.metaLabels" . | nindent 6 }}
+      app.kubernetes.io/component: app
   strategy: {}
   template:
     metadata:
       creationTimestamp: null
       labels:
         {{- include "kong-collectorapi.metaLabels" . | nindent 8 }}
+        app.kubernetes.io/component: app
     spec:
     {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
