--- a/Chart.yaml
+++ b/Chart.yaml
@@ -12,3 +12,10 @@ version: 0.1.2
 # incremented each time you make changes to the application.
 appVersion: 1.1.0
 
+# dependencies:
+# - name: postgresql
+#   version: ~8.1.0
+#   repository: https://kubernetes-charts.storage.googleapis.com/
+#   condition: postgresql.enabled
+#   tags:
+#     - database
