--- a/templates/collector-deployment.yaml
+++ b/templates/collector-deployment.yaml
@@ -34,7 +34,7 @@ spec:
         - flask db upgrade && /collector/run-collector.sh
         env:
         - name: CELERY_BROKER_URL
-          value: "redis://:{{ .Values.redis.password }}@{{ .Values.redis.host }}:{{ .Values.redis.port }}/0"
+          value: "redis://:{{ .Values.redis.password }}@{{ template "kong-collectorapi.redis.fullname" . }}:{{ .Values.redis.port }}/0"
         - name: COLLECTOR_DISCARD
           value: "True"
         - name: FLASK_APP
