--- a/kong-values.yaml
+++ b/kong-values.yaml
@@ -287,7 +287,7 @@ env:
   pg_user: kong
   pg_password: kong
   admin_listen: 0.0.0.0:8001, 0.0.0.0:32001
-  admin_api_uri: 192.168.64.5:32001
+  admin_gui_flags: '{"IMMUNITY_ENABLED":true}'
 # If you want to specify resources, uncomment the following
 # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
 resources: {}
@@ -387,7 +387,7 @@ plugins: {}
 # created in k8s.  It uses CRDs for more fine grained control over routing and
 # for Kong specific configuration.
 ingressController:
-  enabled: true
+  enabled: false
   image:
     repository: kong-docker-kubernetes-ingress-controller.bintray.io/kong-ingress-controller
     tag: 0.6.0
