add psql password

--- a/kong-values.yaml
+++ b/kong-values.yaml
@@ -365,6 +365,7 @@ podSecurityPolicy:
 postgresql:
   enabled: true
   postgresqlUsername: kong
+  postgresqlPassword: kong
   postgresqlDatabase: kong
   service:
     port: 5432
