--- a/Chart.yaml
+++ b/Chart.yaml
@@ -18,3 +18,6 @@ dependencies:
   version: 9.3.2
   repository: https://kubernetes-charts.storage.googleapis.com/
   condition: redis.enabled
+- name: kong
+  version: 0.36.1
+  repository: https://kubernetes-charts.storage.googleapis.com/
