--- a/templates/celery-beat-deployment.yaml
+++ b/templates/celery-beat-deployment.yaml
@@ -1,12 +1,12 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  name: {{ include "kong-collectorapi.fullname" . }}-celery-beat
   annotations: {}
   creationTimestamp: null
   labels:
     {{- include "kong-collectorapi.metaLabels" . | nindent 4 }}
     app.kubernetes.io/component: queue
-  name: celery-beat
 spec:
   replicas: 1
   strategy: {}
