--- a/values.yaml
+++ b/values.yaml
@@ -15,6 +15,49 @@ waitImage:
 
 
 kong:
+  image:
+    repository: kong-docker-kong-enterprise-edition-docker.bintray.io/kong-enterprise-edition
+    tag: latest
+    pullSecrets:
+    - bintray-kong
+  enterprise:
+    enabled: true
+    license_secret: kong-enterprise-license
+  ingressController.enabled: false
+  admin:
+    enabled: true
+    useTLS: false
+    servicePort: 8001
+    containerPort: 8001
+    type: NodePort
+    nodePort: 32001
+  manager:
+    http:
+      enabled: true
+      servicePort: 8002
+      containerPort: 8002
+      nodePort: 32080
+    tls:
+      enabled: false
+    type: NodePort
+  portal:
+    enabled: false
+  env:
+    database: postgres
+    pg_host: my-release-kongdb
+    pg_user: kong
+    pg_password: kong
+    pg_port: 5432
+    admin_listen: 0.0.0.0:8001, 0.0.0.0:32001
+    admin_gui_flags: '{"IMMUNITY_ENABLED":true}'
+  postgresql:
+    enabled: true
+    postgresqlUsername: kong
+    postgresqlPassword: kong
+    postgresqlDatabase: kong
+    nameOverride: kongdb
+    service:
+      port: 5432
   host: my-kong-kong-admin
   port: "8001"
 
