--- a/values.yaml
+++ b/values.yaml
@@ -1,12 +1,13 @@
 image:
   repository: kong-docker-kong-brain-immunity-base.bintray.io/kong-brain-immunity
-  tag: 1.1.0
+  tag: 1.0.0
   pullPolicy: IfNotPresent
   # repository: kong-docker-kong-brain-internal-builds.bintray.io/kong-brain
   # tag: latest
 
 imagePullSecrets:
   - name: bintray-kong-brain-immunity
+  # - name: bintray-kong-brain-internal
 
 waitImage:
   repository: busybox
@@ -14,49 +15,24 @@ waitImage:
   pullPolicy: IfNotPresent
 
 
-kong:
-  image:
-    repository: kong-docker-kong-enterprise-edition-docker.bintray.io/kong-enterprise-edition
-    tag: latest
-    pullSecrets:
-    - bintray-kong
-  enterprise:
-    enabled: true
-    license_secret: kong-enterprise-license
-  ingressController.enabled: false
-  admin:
-    enabled: true
-    useTLS: false
-    servicePort: 8001
-    containerPort: 8001
-    type: NodePort
-    nodePort: 32001
-  manager:
-    http:
-      enabled: true
-      servicePort: 8002
-      containerPort: 8002
-      nodePort: 32080
-    tls:
-      enabled: false
-    type: NodePort
-  env:
-    database: postgres
-    pg_host: my-release-kongdb
-    pg_user: kong
-    pg_password: kong
-    pg_port: 5432
-    admin_listen: 0.0.0.0:8001, 0.0.0.0:32001
-    admin_gui_flags: '{"IMMUNITY_ENABLED":true}'
-  postgresql:
-    enabled: true
-    postgresqlUsername: kong
-    postgresqlPassword: kong
-    postgresqlDatabase: kong
-    nameOverride: kongdb
-    service:
-      port: 5432
+# Set this to the Kong Admin API hostname
+kongAdminHost: my-kong-kong-admin
+# Set this to the Kong Admin API port
+kongAdminServicePort: 8001
+containerPort: 5000
+# Set a nodePort which is available
+nodePort: 31555
+service: 
+  type: NodePort
+  port: 5000
 
+# Enable this for running integration tests
+testendpoints: 
+  enabled: false
+
+ingress:
+  enabled: false
+  
 postgresql:
   enabled: true
   postgresqlUsername: collector
@@ -69,10 +45,3 @@ redis:
   enabled: true
   port: 6379
   password: redis
-
-service:
-  type: NodePort
-  port: 5000
-
-ingress:
-  enabled: false
