fix(helm) pre-upgrade hook

--- a/templates/migrations.yaml
+++ b/templates/migrations.yaml
@@ -13,7 +13,7 @@ spec:
         {{- include "kong-collectorapi.metaLabels" . | nindent 8 }}
         app.kubernetes.io/component: init-migrations
       annotations:
-        helm.sh/hook: "post-install,post-upgrade"
+        helm.sh/hook: "pre-install,pre-upgrade"
         helm.sh/hook-delete-policy: "hook-succeeded,before-hook-creation"
     spec:
       {{- with .Values.imagePullSecrets }}
