--- a/values.yaml
+++ b/values.yaml
@@ -19,6 +19,8 @@ waitImage:
 kongAdminHost: my-kong-kong-admin
 # Set this to the Kong Admin API port
 kongAdminServicePort: 8001
+# Set this to the Kong Admin API protocol
+kongAdminProtocol: http
 containerPort: 5000
 # Set a nodePort which is available
 nodePort: 31555
