fix(docs) update changelog

--- a/kong-values.yaml
+++ b/kong-values.yaml
@@ -6,7 +6,8 @@ image:
 enterprise:
   enabled: true
   license_secret: kong-enterprise-license
-ingressController.enabled: false
+ingressController:
+  enabled: false
 proxy:
   http:
     enabled: true
