--- a/templates/tests/test-connection.yaml
+++ b/templates/tests/test-connection.yaml
@@ -1,5 +1,5 @@
-apiVersion: v1
-kind: Pod
+apiVersion: batch/v1
+kind: Job
 metadata:
   name: "{{ include "kong-collectorapi.fullname" . }}-test-connection"
   labels:
@@ -7,9 +7,11 @@ metadata:
   annotations:
     "helm.sh/hook": test-success
 spec:
-  containers:
-    - name: wget
-      image: busybox
-      command: ['wget']
-      args:  ['{{ include "kong-collectorapi.fullname" . }}:{{ .Values.service.port }}']
-  restartPolicy: Never
+  template:
+    spec:
+      containers:
+      - name: wget
+        image: busybox
+        command: ['wget']
+        args:  ['{{ include "kong-collectorapi.fullname" . }}:{{ .Values.collector.service.port }}']
+      restartPolicy: Never
