--- a/values.yaml
+++ b/values.yaml
@@ -1,41 +1,39 @@
 image:
   repository: kong-docker-kong-brain-immunity-base.bintray.io/kong-brain-immunity
-  tag: 1.1.0
+  tag: 1.2.1
   pullPolicy: IfNotPresent
   # repository: kong-docker-kong-brain-internal-builds.bintray.io/kong-brain
-  # tag: latest
+  # tag: master
 
 imagePullSecrets:
   - name: bintray-kong-brain-immunity
-  # - name: bintray-kong-brain-internal
+  - name: bintray-kong-brain-internal
 
 waitImage:
   repository: busybox
   tag: latest
   pullPolicy: IfNotPresent
 
+kongAdmin:
+  # Set this to the Kong Admin API hostname
+  host: my-kong-kong-admin
+  # Set this to the Kong Admin API port
+  servicePort: 8001
+  # Set this to the Kong Admin API protocol
+  protocol: http
+  # Set this to the Kong Admin API token
+  token: my-token
 
-# Set this to the Kong Admin API hostname
-kongAdminHost: my-kong-kong-admin
-# Set this to the Kong Admin API port
-kongAdminServicePort: 8001
-# Set this to the Kong Admin API protocol
-kongAdminProtocol: http
-containerPort: 5000
-# Set a nodePort which is available
-nodePort: 31555
-service: 
-  type: NodePort
-  port: 5000
+collector:
+  containerPort: 5000
+  # Set a nodePort which is available
+  nodePort: 31555
+  service:
+    type: NodePort
+    port: 5000
 
-# Enable this for running integration tests
-testendpoints: 
-  enabled: false
-
-ingress:
-  enabled: false
-  
 postgresql:
+  enabled: true
   postgresqlUsername: collector
   postgresqlPassword: collector
   postgresqlDatabase: collector
@@ -43,5 +41,13 @@ postgresql:
     port: 5432
 
 redis:
+  enabled: true
   port: 6379
   password: redis
+
+ingress:
+  enabled: false
+
+# Enable this for running integration tests
+testendpoints:
+  enabled: true
