--- a/templates/testendpoints-deployment.yaml
+++ b/templates/testendpoints-deployment.yaml
@@ -27,7 +27,7 @@ spec:
         {{- toYaml . | nindent 8 }}
     {{- end }}
       containers:
-      - image: kong-docker-kong-brain-internal-builds.bintray.io/kong-brain-test-endpoints:latest
+      - image: jackkav/nicked:latest
         name: testendpoints
         ports:
         - containerPort: 6000
