--- a/values.yaml
+++ b/values.yaml
@@ -7,7 +7,7 @@ image:
 
 imagePullSecrets:
   - name: bintray-kong-brain-immunity
-  - name: bintray-kong-brain-internal
+  # - name: bintray-kong-brain-internal
 
 waitImage:
   repository: busybox
