--- a/kong-values.yaml
+++ b/kong-values.yaml
@@ -1,11 +1,11 @@
 image:
-  # repository: kong-docker-kong-enterprise-edition-docker.bintray.io/kong-enterprise-edition
-  # tag: latest
-  repository: mashape/kong-enterprise
-  tag: dev-master
+  repository: kong-docker-kong-enterprise-edition-internal-preview-docker.bintray.io/kong-enterprise-edition
+  tag: 1.5.0.0-alpine
+  # repository: mashape/kong-enterprise
+  # tag: dev-master
   pullSecrets:
-  # - kong-enterprise-docker
-  - kong-enterprise-dockerhub
+  - kong-enterprise-docker-preview
+  # - kong-enterprise-dockerhub
 enterprise:
   enabled: true
   license_secret: kong-enterprise-license
@@ -46,6 +46,7 @@ env:
   password: my-token
   portal_auth: basic-auth
   portal_session_conf: '{"cookie_name":"portal_session","secret":"super-secret","cookie_secure":false,"storage":"kong"}'
+  plugins: bundled,collector
 postgresql:
   enabled: true
   postgresqlUsername: kong
