--- a/values.yaml
+++ b/values.yaml
@@ -2,18 +2,16 @@ image:
   repository: kong-docker-kong-brain-immunity-base.bintray.io/kong-brain-immunity
   tag: 1.2.1
   pullPolicy: IfNotPresent
-  # repository: kong-docker-kong-brain-internal-builds.bintray.io/kong-brain
-  # tag: master
 
 imagePullSecrets:
   - name: bintray-kong-brain-immunity
-  # - name: bintray-kong-brain-internal
 
 waitImage:
   repository: busybox
   tag: latest
   pullPolicy: IfNotPresent
 
+# These parameters enable collector to send requests to Kong Admin API
 kongAdmin:
   # Set this to the Kong Admin API hostname
   host: my-kong-kong-admin
@@ -21,7 +19,7 @@ kongAdmin:
   servicePort: 8001
   # Set this to the Kong Admin API protocol
   protocol: http
-  # Set this to the Kong Admin API token
+  # Set this to the Kong Admin API token / KONG_PASSWORD
   token: my-token
 
 collector:
@@ -40,7 +38,7 @@ postgresql:
   postgresqlDatabase: collector
   service:
     port: 5432
-  # host: collector-postgresql # uncomment if bringing your own postgresql
+    # host: collector-postgresql # uncomment if bringing your own postgresql
 
 redis:
   ## Set to false if bringing your own redis.
@@ -52,6 +50,6 @@ redis:
 ingress:
   enabled: false
 
-# Enable this for running integration tests
+# Enable this only for running integration tests
 testendpoints:
-  enabled: true
+  enabled: false
