--- a/kong-values.yaml
+++ b/kong-values.yaml
@@ -42,6 +42,9 @@ env:
   admin_listen: 0.0.0.0:8001, 0.0.0.0:32001
   admin_gui_flags: '{"IMMUNITY_ENABLED":true}'
   password: my-token
+  enforce_rbac: "on"
+  admin_gui_auth: basic-auth
+  admin_gui_session_conf: '{"cookie_name":"admin_session","secret":"super-secret","cookie_secure":false,"storage":"kong"}'
   portal_auth: basic-auth
   portal_session_conf: '{"cookie_name":"portal_session","secret":"super-secret","cookie_secure":false,"storage":"kong"}'
   plugins: bundled,collector
